# ros1_vio_playground

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.cuda  README.md  build_container.sh  build_container_cuda.sh  run_container.sh
Datasets/: README.md
code/hl_orbslam3_wrapper/: CMakeLists.txt  README.md  dummy_imu_pub_node.py  hl_stereo.launch  hl_stereo_imu.launch  hololens_viz.rviz  imu_downsampling_node.py  package.xml  setup.py
code/hl_orbslam3_wrapper/cfg/: hilti22-orbslam.yaml  hololens.yaml  spot.yaml  vinsmono_spot.yaml  vinsmono_spot_bw.yaml
code/hl_orbslam3_wrapper/cfg/vins-fusion/: cam0.yaml  cam1.yaml  hilti22-vins-mono.yaml  hilti22-vins-stereo.yaml
code/hl_orbslam3_wrapper/launch/: hilti22-orbslam-mono.launch  hilti22-orbslam-stereo.launch  hilti22-vins-mono.launch  hilti22-vins-stereo.launch  hl_mono_imu.launch  hl_stereo.launch  hl_stereo_imu.launch  spot_stereo_imu.launch  vinsmono_spot_bw.launch  vinsmono_spot_rgb.launch
code/hl_orbslam3_wrapper/nodes/: imu_downsampling_node.py
code/hl_orbslam3_wrapper/scripts/: add_camera_info_to_hilti.py  convert_rosbag_to_capture.py  process_vins_mono.py  run_all_vio.sh
code/hl_orbslam3_wrapper/viz/: hilti22.rviz  maplab_hololens.rviz  spot_viz.rviz  vinsmono_spot_bw.rviz  vinsmono_spot_viz.rviz
code/orbslam3/: README.md  hl_stereo.launch  hololens.yaml  imu_downsampling_node.py
docker_build_utils/: .tmux.conf  bash_profile_ext  bashrc  post_create_command.sh  ros_entrypoint.sh  tmux.conf  vimrc
user/: process_rosbag_paths.ipynb
